--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css" />
     <title>PaintJS</title>
 </head>
-<body>
-    <script src="app.js"></script>
+    <script src="app.jasdasdasdadsad"></script>
 </body>
 </html>
