--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>PaintJS</title>
 </head>
 <body>
-    <script src="appdasdasd.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
